--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -17,7 +17,7 @@
 
 .skills-heading {
   text-align: center;
-  margin-bottom: 70px;
+  margin-bottom: 45px;
 }
 
 
@@ -44,15 +44,10 @@
 /* Main Row */
 
 .skill-row {
-
   display: flex;
   align-items: center;
-  gap: 50px;
-
-  margin-bottom: 60px;
-
-  position: relative;
-
+  gap: 30px;
+  margin-bottom: 30px;
 }
 
 
@@ -105,7 +100,7 @@
 
   gap: clamp(4px, 1vw, 20px);
 
-  padding: 80px 12px 20px;
+  padding: 45px 12px 15px;
 
   box-sizing: border-box;
 }
@@ -117,7 +112,7 @@
 
   position:absolute;
 
-  top:120px;
+  top:85px;
 
   left:0;
 
@@ -177,7 +172,7 @@
   backdrop-filter: blur(22px);
   transition: .3s;
 
-  margin-bottom: 30px;
+  margin-bottom: 15px;
 }
 
 
@@ -206,7 +201,7 @@
 
   position:absolute;
 
-  top:112px;
+  top:78px;
 
   box-shadow:
 
@@ -248,7 +243,7 @@
 .skill-track{
     justify-content:center;
     gap:22px;
-    padding:80px 0 20px;
+    padding:30px 0 20px;
     overflow-x:auto;
     overflow-y:hidden;
     flex-wrap:nowrap;
